Fix weird bug on Firefox (Nightly, 45a) where avatar are not visible due to translate3d 0 trick

--- a/web_modules/css/blocks/contributors.css
+++ b/web_modules/css/blocks/contributors.css
@@ -27,6 +27,7 @@
     display: inline-block;
     margin: 0 0 1rem 1rem;
     vertical-align: middle;
+    transform: none;
   }
 
     .putainde-Contributor-avatar {
